[package]
name = "date_time_parser_multi_language"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "date_time_parser_multi_language is a package designed to extract and interpret date information from strings across multiple languages."
homepage = "https://github.com/Outlawraspberry/date_time_parser_mutli_language"
readme = "./README.md"
keywords = [
  "date-parsing",
  "multi-lang",
  "string-parse",
  "i18n",
  "date-extract"
]
categories = ["date-and-time", "internationalization", "text-processing", "parser-implementations"]

include = ["src", "Cargo.lock", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]

[dependencies]
chrono = "0.4.40"
log = "0.4.27"
regex = "1.11.1"
